--- a/web/assets/styles/style.css
+++ b/web/assets/styles/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  background: black;
+  background: #111111;
   font-family: "Roboto", sans-serif;
   width: 100%;
   height: 100%;
@@ -14,6 +14,10 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+* ::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
 
 h1,
@@ -43,22 +47,21 @@ header::before {
   left: 0;
   right: 0;
   content: "";
-  background: rgba(0, 0, 0, 0.3);
+  background: linear-gradient(180deg, #111111 0%, rgba(17, 17, 17, 0.2117647059) 20%, rgba(17, 17, 17, 0.2117647059) 80%, #111111 100%);
 }
-
-.content {
+header .content {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
   z-index: 2;
 }
-.content h1 {
-  font-size: 35rem;
+header .content h1 {
+  font-size: 30rem;
   text-transform: uppercase;
   position: relative;
 }
-.content h1::before {
+header .content h1::before {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -70,7 +73,96 @@ header::before {
   -webkit-text-stroke-color: white;
   -webkit-text-stroke-width: 4px;
 }
-.content img {
+header .content img {
   position: absolute;
-  width: 550px;
+  width: 500px;
+}
+
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 2rem 0;
+}
+main section {
+  margin: 3rem 0;
+}
+main section h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+}
+main section .content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+}
+main section .content .text {
+  width: 400px;
+  font-size: 1.1rem;
+  line-height: 1.25;
+}
+main section .content .text p {
+  margin-bottom: 1rem;
+}
+main section .content .text a {
+  color: white;
+  background: #FF6CBE;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  padding: 0.5rem 1.5rem;
+}
+main section .content img {
+  width: 400px;
+  border-radius: 1rem;
+}
+main section .shop-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+main section .shop-content .product {
+  width: 350px;
+  padding: 1rem;
+  border-radius: 1rem;
+  background: #2b2b2b;
+  transition: 0.3s ease-in-out;
+}
+main section .shop-content .product img {
+  width: 100%;
+  border-radius: 0.5rem;
+  background: white;
+}
+main section .shop-content .product .text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
+main section .shop-content .product h3 {
+  font-size: 1.5rem;
+}
+main section .shop-content .product .price {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+main section .shop-content .product a {
+  background: #08F3F7;
+  color: white;
+  text-decoration: none;
+  width: 100%;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
+  font-family: "Futurist", sans-serif;
+  text-align: center;
+  display: block;
+  color: black;
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+}
+main section .shop-content .product:hover {
+  transform: scale(1.025);
+  background: #373737;
 }/*# sourceMappingURL=style.css.map */
