--- a/web/assets/styles/style.scss
+++ b/web/assets/styles/style.scss
@@ -13,6 +13,10 @@ body {
   width: 100%;
   height: 100%;
   color: $text;
+
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 * {
@@ -79,7 +83,7 @@ header {
         bottom: 0;
         left: 0;
         right: 0;
-        content: "ZERO";
+        content: attr(data-title);
         color: transparent;
         z-index: 2;
         -webkit-text-stroke-color: white;
@@ -101,7 +105,18 @@ main {
   padding: 2rem 0;
 
   section {
-    margin: 3rem 0;
+    margin: 2rem 0;
+    padding: 2rem 0;
+
+    &.giveaway-content {
+      .content {
+        .text {
+          max-width: 700px;
+          width: fit-content;
+          li {margin-bottom: .5rem; font-weight: bold;}
+        }
+      }
+    }
 
     h2 {text-align: center; margin-bottom: 2rem; font-size: 2.5rem;}
 
@@ -120,12 +135,16 @@ main {
         }
 
         a {
+          display: block;
           color: $text;
           background: $primary;
           border-radius: .5rem;
           text-decoration: none;
           padding: .5rem 1.5rem;
+          margin-top: 2rem;
+          width: fit-content;
         }
+
       }
 
       img {
@@ -191,5 +210,148 @@ main {
         }
       }
     }
+  }
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 3rem;
+  background: url("../images/bg-web-04.png");
+  background-size: cover;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: "";
+    background: linear-gradient(
+      180deg,
+      $background 0%,
+      #11111136 20%,
+      #11111136 80%,
+      $background 100%
+    );
+  }
+
+  .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    gap: 2rem;
+    max-width: min(800px, 95vw);
+    width: 100%;
+
+    .map {border-radius: 1rem; width: 70%; height: 200px;}
+    .text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end;
+      gap: .5rem;
+      text-align: right;
+      height: 100%;
+      width: 30%;
+
+      h2 {
+        font-size: 1.75rem;
+        margin-bottom: .5rem;
+      }
+
+      p {
+        font-size: 1.1rem;
+      }
+    }
+  }
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000;
+
+  &.closed {
+    display: none;
+  }
+
+  section.giveaway {
+    background: $secondary;
+    color: $background;
+    border-radius: 1rem;
+    width: fit-content;
+    margin: auto;
+    max-width: 600px;
+    padding: 2rem;
+    text-align: center;
+    position: relative;
+
+    .close-button {
+      position: absolute;
+      top: .5rem;
+      right: .75rem;
+      font-size: 1.25rem;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    h2 {margin-bottom: 1rem; font-size: 1.75rem;}
+    .content .text {
+      p {margin-bottom: .5rem;}
+
+      a {
+        display: block;
+        color: $text;
+        background: $primary;
+        border-radius: .5rem;
+        text-decoration: none;
+        padding: .5rem 1.5rem;
+        margin: auto;
+        margin-top: 1rem;
+        width: fit-content;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  header .content
+  {
+    h1 {font-size: 25rem;}
+    h1.smaller {font-size: 20rem;}
+
+    img {width: 350px;}
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  header .content
+  {
+    h1 {font-size: 20rem;}
+    h1.smaller {font-size: 15rem;}
+
+    img {width: 350px;}
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  header .content
+  {
+    h1 {font-size: 15rem;}
+    h1.smaller {font-size: 10rem;}
+
+    img {width: 500px;}
   }
 }
